'/systems/' remplacé par 'systems/ sauf pour le .css où 'url(.systems/' et dérivés doit rester

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -1,7 +1,7 @@
 @import "./elements/_index.less";
 
 
-// Variables CSS
+//: Variables CSS
 :root {
 --logo-standard: url('/systems/penombre/assets/ui/jeton_fiche.webp');
 }
