vidéo Carter insérée dans colonne de droite Pénombre

--- a/templates/sidebar-menu.hbs
+++ b/templates/sidebar-menu.hbs
@@ -36,6 +36,17 @@
     <i class="fa-solid fa-bug" inert></i>
     {{localize "PENOMBRE.Sidebar.bugReport"}}
   </a>
+
+  <a
+    class="button"
+    href="https://www.youtube.com/watch?v=xpXrrsoP8UU"
+    rel="nofollow noopener"
+    target="_blank"
+    data-tooltip="{{localize 'PENOMBRE.Sidebar.videoTooltip'}}"
+  >
+    <i class="fa-solid fa-video" inert></i>
+    {{localize "PENOMBRE.Sidebar.video"}}
+  </a>
 </section>
 
 <section class="penombre system flexcol">
