Logo du jeu dans volet Pénombre à droite

--- a/templates/sidebar-menu.hbs
+++ b/templates/sidebar-menu.hbs
@@ -1,6 +1,7 @@
 <section class="penombre info flexcol">
   <h1 class="title">{{localize "PENOMBRE.Sidebar.title"}}</h1>
   <p class="subtitle version">{{version}}</p>
+  <img class="logo-info" src="systems/penombre/assets/ui/logo_penombre_sur_fond_sombre_ombre_portee.webp"></img>
 </section>
 
 <section class="penombre support flexcol">
