--- a/styles/eminence.less
+++ b/styles/eminence.less
@@ -749,6 +749,7 @@ body {
 
       .titre-section-pouvoirs {
         font-size: @font-size-2xlarge;
+        margin-left: 100px;
         float: none;
       }
 
@@ -829,6 +830,10 @@ body {
           td.item-controls {
             width: 70px;
             font-size: @font-size-base;
+
+            .plusitem {
+              float: right;
+            }
           }
         }
 
@@ -883,12 +888,9 @@ body {
       color: @color-secondary;
       text-align: center;
 
-      .plusitem {
-        text-align: right;
-      }
-
       .titre-section-atouts {
         font-size: @font-size-2xlarge;
+        margin-left: 100px;
         float: none;
       }
 
@@ -961,6 +963,10 @@ body {
           td.item-controls {
             width: 70px;
             font-size: @font-size-base;
+
+            .plusitem {
+              float: right;
+            }
           }
 
           .item-case {
@@ -1013,6 +1019,7 @@ body {
 
       .titre-section-maitrises {
         font-size: @font-size-2xlarge;
+        margin-left: 100px;
         float: none;
       }
 
@@ -1081,6 +1088,10 @@ body {
           td.item-controls {
             width: 70px;
             font-size: @font-size-base;
+
+            .plusitem {
+              float: right;
+            }
           }
         }
 
