--- a/templates/eminence/partials/maitrises.hbs
+++ b/templates/eminence/partials/maitrises.hbs
@@ -32,7 +32,7 @@
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='une maîtrise' }}" data-action="create" data-type="maitrise"><i class="fas fa-plus"></i></a>
+                            <a class="plusitem item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='une maîtrise' }}" data-action="create" data-type="maitrise"><i class="fas fa-plus"></i></a>
                         {{/if}}
                     </th>
                 </tr>
