--- a/templates/eminence/partials/pouvoirs.hbs
+++ b/templates/eminence/partials/pouvoirs.hbs
@@ -29,7 +29,7 @@
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='un pouvoir' }}" data-action="create" data-type="pouvoir"><i class="fas fa-plus"></i></a>
+                            <a class="plusitem item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='un pouvoir' }}" data-action="create" data-type="pouvoir"><i class="fas fa-plus"></i></a>
                         {{/if}}
                     </th>
                 </tr>
