--- a/styles/items.less
+++ b/styles/items.less
@@ -4,7 +4,7 @@
     &.maitrise .maitrise-content,
     &.pouvoir .pouvoir-content,
     &.intrigue .intrigue-content,
-    &.action .action-content  {
+    &.action .action-content {
       background-color: @background-light; // Si et seulement si on est en mode clair (et pas sombre) de la fiche
       background-image: url("/systems/penombre/assets/background/fond-coupe.webp");
       background-repeat: repeat;
@@ -12,200 +12,71 @@
   }
 }
 
+.item-mixin() {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  .auto {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    .editor {
+      flex: 1;
+      min-height: 0;
+      overflow-y: auto;
+
+      .editor-container {
+        height: 100%;
+      }
+    }
+  }
+
+  .logo-frame {
+    display: flex;
+    justify-content: space-between;
+    flex-shrink: 0;
+
+    .logo-img {
+      width: 80px;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    .name {
+      width: calc(100% - 90px);
+    }
+  }
+}
+
 .penombre {
   &.atout {
-    height: 100%;
-    
     .atout-content .standard-form {
-      height: 100%;
-      .auto {
-        overflow-y: auto;
-        height: 100%;
-        .editor {
-            overflow-y: auto;
-            min-height: 250px;
-          .editor-container {
-            min-height: 250px;
-          }
-        }
-      }
-
-      .logo-frame {
-        display: flex;
-        justify-content: space-between;
-
-        .logo-img {
-        width: 80px;
-          &:hover {
-            cursor: pointer;
-          }
-        }
-        .name {
-        width: calc(100% - 90px);
-        }
-      }
-      /*
-      .auto {
-        // height: auto;
-        min-height: 100%;
-        .editor {
-        min-height: 100%;
-        }
-      }
-      */
+      .item-mixin();
     }
   }
 
   &.maitrise {
-    height: 100%;
-
     .maitrise-content .standard-form {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      
-      .auto {
-        overflow-y: auto;
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        
-        .editor {
-          overflow-y: auto;
-          flex: 1;
-          min-height: 250px;
-          
-          .editor-container {
-            min-height: 250px;
-            height: 100%;
-          }
-        }
-      }
-
-      .logo-frame {
-        display: flex;
-        justify-content: space-between;
-        flex-shrink: 0;
-
-        .logo-img {
-        width: 80px;
-          &:hover {
-            cursor: pointer;
-          }
-        }
-        .name {
-          width: calc(100% - 90px);
-        }
-      }
+      .item-mixin();
     }
   }
 
   &.pouvoir {
-    // height: 100%;
-
     .pouvoir-content .standard-form {
-      height: 100%;
-      .auto {
-        overflow-y: auto;
-        height: 100%;
-        .editor {
-            overflow-y: auto;
-            min-height: 250px;
-          .editor-container {
-            min-height: 250px;
-          }
-        }
-      }
-
-      .logo-frame {
-        display: flex;
-        justify-content: space-between;
-        
-        .logo-img {
-        width: 80px;
-          &:hover {
-            cursor: pointer;
-          }
-        }
-        .name {
-          width: calc(100% - 90px);
-        }
-      }
-      .details {
-        display: flex;
-        justify-content: space-between;
-
-        select[name="system.type"] {
-          width: 100px;
-        }
-      }
+      .item-mixin();
     }
   }
 
   &.intrigue {
-    height: 100%;
-
     .intrigue-content .standard-form {
-      height: 100%;
-      .auto {
-        overflow-y: auto;
-        height: 100%;
-        .editor {
-            overflow-y: auto;
-            min-height: 250px;
-          .editor-container {
-            min-height: 250px;
-          }
-        }
-      }
-      .logo-frame {
-        display: flex;
-        justify-content: space-between;
-
-        .logo-img {
-        width: 80px;
-          &:hover {
-            cursor: pointer;
-          }
-        }
-        .name {
-          width: calc(100% - 90px);
-        }
-      }
+      .item-mixin();
     }
   }
 
   &.action {
-    height: 100%;
-
     .action-content .standard-form {
-      height: 100%;
-      .auto {
-        overflow-y: auto;
-        height: 100%;
-        .editor {
-            overflow-y: auto;
-            min-height: 250px;
-          .editor-container {
-            min-height: 250px;
-          }
-        }
-      }
-
-      .logo-frame {
-        display: flex;
-        justify-content: space-between;
-
-        .logo-img {
-        width: 80px;
-          &:hover {
-            cursor: pointer;
-          }
-        }
-        .name {
-          width: calc(100% - 90px);
-        }
-      }
+      .item-mixin();
     }
   }
 }
